# web_hw_14

./: Dockerfile.yml  alembic.ini  example.env  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 719ef0ce1afa_.py  a2fe077e6fed_.py  af9e385787d3_.py  ba0d45cabfbb_init.py  e56d04c8fd07_init.py  e8bdae284ea2_.py  fedb22704826_.py
src/: Settings.py  schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
