[tool.poetry]
name = "web-hw-14"
version = "0.1.0"
description = ""
authors = ["PYOrm <ormagedon2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
passlib = "^1.7.4"
bcrypt = "4.0.1"
cloudinary = "^1.41.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
redis = "^5.0.8"
fastapi-limiter = "^0.1.6"
crispy-bootstrap4 = "^2024.1"
bson = "^0.5.10"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
